--- a/index.html
+++ b/index.html
@@ -6,9 +6,13 @@
     <link rel="stylesheet" media="all" href="style.css" />
 </head>
 <body>
-  <ul class="menu">
+  <ul id="menu">
     <li id="menu-hp">HP: 0</li>
-    <li id="menu-snowflakes">SNOWFLAKES: 0</li>
+    <li id="menu-snowflakes">❄: 0</li>
+    <li id="menu-str">STR: 0</li>
+    <li id="menu-def">DEF: 0</li>
+  </ul>
+  <ul id="store">
   </ul>
   <script src="/index.js" type="text/javascript"></script>
 </body>
