--- a/index.html
+++ b/index.html
@@ -12,7 +12,8 @@
     <li id="menu-str">STR: 0</li>
     <li id="menu-def">DEF: 0</li>
   </ul>
-  <ul id="store">
+  <ul id="store"></ul>
+  <ul id="fight">
   </ul>
   <script src="/index.js" type="text/javascript"></script>
 </body>
