--- a/index.html
+++ b/index.html
@@ -15,6 +15,6 @@
   <ul id="store"></ul>
   <ul id="fight">
   </ul>
-  <script src="/index.js" type="text/javascript"></script>
+  <script src="/bundle.js" type="text/javascript"></script>
 </body>
 </html>
