--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>☃☃☃☃</title>
+    <title>snoscreen</title>
     <link rel="stylesheet" media="all" href="style.css" />
 </head>
 <body>
